Closed Bug 743632 Opened 13 years ago Closed 13 years ago

nsHTMLEditor::GetNextHTMLSibling(nsIDOMNode*, PRInt32 nsCOMPtr<nsIDOMNode>*) is broken

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: Ms2ger, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

It calls Get*Prior*HTMLSibling. (Also, shouldn't it call GetChildAt with |inOffset + 1| instead of |inOffset|?)
Attached patch Patch (v1)Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #613324 - Flags: review?(roc)
Whiteboard: [autoland-try:-b do -p all -u all -t none]
Whiteboard: [autoland-try:-b do -p all -u all -t none] → [autoland-in-queue]
Autoland Patchset: Patches: 613324 Branch: mozilla-central => try Patchset could not be applied and pushed. Failed to push
Whiteboard: [autoland-in-queue]
Whiteboard: [autoland-try:-b do -p all -u all -t none]
Whiteboard: [autoland-try:-b do -p all -u all -t none]
Target Milestone: --- → mozilla14
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: