Bug 743632 - Fix nsHTMLEditor::GetNextHTMLSibling to return the correct node; r=roc